# diploma

./: .clang-tidy  AnyObject.h  CMakeLists.txt  DataProvider.h  EigenProxy.h  Except.cpp  Except.h  Layer.cpp  Layer.h  Loss.h  NeuralNet.cpp  NeuralNet.h  Optimizer.cpp  Optimizer.h  OptimizerParam.h  README.md  main.cpp  mnist.h
EigenRand-0.5.0/: CMakeLists.txt  README.md
EigenRand-0.5.0/.github/workflows/: generate_docs.yml  pull_request_test.yml  pull_request_test_non_x64.yml  release.yml
EigenRand-0.5.0/benchmark/: comp_scipy.py
EigenRand-0.5.0/doxygen/: customdoxygen.css  footer.html  header.html
EigenRand-0.5.0/test/: CMakeLists.txt
eigen-3.4.0/: CMakeLists.txt
eigen-3.4.0/.gitlab/issue_templates/: Bug Report.md
eigen-3.4.0/.gitlab/merge_request_templates/: Merge Request Template.md
eigen-3.4.0/bench/btl/: CMakeLists.txt
eigen-3.4.0/bench/spbench/: CMakeLists.txt
eigen-3.4.0/blas/: CMakeLists.txt
eigen-3.4.0/blas/testing/: CMakeLists.txt
eigen-3.4.0/cmake/: FindComputeCpp.cmake
eigen-3.4.0/debug/gdb/: printers.py
eigen-3.4.0/debug/msvc/: eigen.natvis
eigen-3.4.0/demos/: CMakeLists.txt
eigen-3.4.0/demos/mandelbrot/: CMakeLists.txt
eigen-3.4.0/doc/: CMakeLists.txt  eigen_navtree_hacks.js  eigendoxy.css
eigen-3.4.0/doc/snippets/: CMakeLists.txt
eigen-3.4.0/doc/special_examples/: CMakeLists.txt
eigen-3.4.0/failtest/: CMakeLists.txt
eigen-3.4.0/lapack/: CMakeLists.txt
eigen-3.4.0/scripts/: eigen_gen_split_test_help.cmake  relicense.py
eigen-3.4.0/test/: CMakeLists.txt
eigen-3.4.0/unsupported/: CMakeLists.txt
(+29 files in other folders)
